--- a/html/list.html
+++ b/html/list.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="GoAnimate Legacy Remastered is an LVM project which brings back the GoAnimate Legacy Video Maker.">
+<meta name="description" content="Vyond Legacy Remastered is an LVM project which brings back the GoAnimate Legacy Video Maker.">
 <meta property="og:site_name" content="GoAnimate">
 <meta property="fb:app_id" content="177116303202">
 
@@ -357,7 +357,7 @@ if (self !== top) {
 
 <div class="free-trial-banner">
     <span class="glyph-pro glyph-warning-sign"></span>
-    GoAnimate Legacy Remastered is fully working.</div>
+    Vyond Legacy Remastered is fully working.</div>
 <script>
     (function(){
         // Log last upsell date.
@@ -392,7 +392,7 @@ _wq.push({ id: '70x3iky0kr', onReady: function(video) {
             <h1 class="vm5-banner__main__title">
                 Make Videos <b>Really Faster</b>            </h1>
             <div class="vm5-banner__main__content">
-                The all-new LVM clones are fast, intuitive and already included without your free trial! No registration. No cost.            </div>
+                The all-new Vyond Legacy Remastered is fast, intuitive and already included without your free trial! No registration. No cost.            </div>
             <ul class="vm5-banner__main__bullets row">
                 <li class="col-sm-4">
                     <span class="vm5-banner__main__bullet__icon vm5-banner__main__bullet__icon--preview"></span>
@@ -405,7 +405,7 @@ _wq.push({ id: '70x3iky0kr', onReady: function(video) {
                     Expanded Timeline                </li>
             </ul>
             <div class="vm5-banner__cta">
-                <a class="btn btn-orange btn-lg text-uppercase" href="/go_full" target="_blank" onclick="amplitudeTrackEvent(AMPLITUDE_EVENT.VM5_LEGACY_BANNER_CTA, { trigger: 'make_a_video' })">
+                <a class="btn btn-orange btn-lg text-uppercase" href="/html/lvm.html" target="_blank" onclick="amplitudeTrackEvent(AMPLITUDE_EVENT.VM5_LEGACY_BANNER_CTA, { trigger: 'make_a_video' })">
                     Make a Video                </a>
                 <a class="btn btn-default btn-lg text-uppercase" href="/cc?themeId=family&amp;bs=adam" target="_blank" onclick="amplitudeTrackEvent(AMPLITUDE_EVENT.VM5_LEGACY_BANNER_CTA, { trigger: 'make_a_character' })">
                     Make a Character                </a>
