--- a/html/list.html
+++ b/html/list.html
@@ -406,9 +406,9 @@ _wq.push({ id: '70x3iky0kr', onReady: function(video) {
             </ul>
             <div class="vm5-banner__cta">
                 <a class="btn btn-orange btn-lg text-uppercase" href="/html/lvm.html" target="_blank" onclick="amplitudeTrackEvent(AMPLITUDE_EVENT.VM5_LEGACY_BANNER_CTA, { trigger: 'make_a_video' })">
-                    Make a Video                </a>
+                    Start now                </a>
                 <a class="btn btn-default btn-lg text-uppercase" href="/cc?themeId=family&amp;bs=adam" target="_blank" onclick="amplitudeTrackEvent(AMPLITUDE_EVENT.VM5_LEGACY_BANNER_CTA, { trigger: 'make_a_character' })">
-                    Make a Character                </a>
+                    go to VSR                </a>
         </div>
         </div>
     </div>
