--- a/html/list.html
+++ b/html/list.html
@@ -410,7 +410,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="divider"></li>
         <li><a href="https://app.vyond.com/video/list" onclick="amplitudeTrackSwitchVideoMaker('Go to Vyond Studio')">Go to Vyond Studio</a></li>
         <li class="divider"></li>
-        <li><a class="gtm-logout" href="https://ga.vyond.com/logoff">Log Out</a></li>
+        <li><a class="gtm-logout" href="https://app.vyond.com/logoff">Log Out</a></li>
     </ul>
 </li>		
 
