--- a/html/list.html
+++ b/html/list.html
@@ -436,7 +436,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="free-trial-banner">
     <span class="glyph-pro glyph-warning-sign"></span>
-    in january 12th, the <a href="https://www.adobe.com/products/flashplayer/end-of-life.html">adobe flash player</a><br>is going to shut down meaning that this site will no longer work. <a href="https://github.com/josephcrosmanplays532/Goanimate-Remastered-Is-Back">View the source code &amp; server page on github.</a></div>
+    adobe flash player has retired. <a href="https://www.adobe.com/products/flashplayer/end-of-life.html">More Imformation></a><br>this website stil works for some people with adobe flash not on timebomb. <a href="https://github.com/josephcrosmanplays532/Goanimate-Remastered-Is-Back">View the source code &amp; server page on github.</a></div>
 <script>
     (function(){
         // Log last upsell date.
@@ -553,8 +553,20 @@ transition: none !important;
                 <tr>
                     <td colspan="4">
                         <div class="emptystate">
-                            <img class="emptystate-image" src="https://d3v4eglovri8yt.cloudfront.net/static/50831fab928bf0f4/go/img/myvideos/chair_empty.png">
-                            <p>No videos</p>
+                            </h1>
+    </div>
+
+    <table>
+		<thead>
+			<tr>
+				<td></td>
+				<td>Video Title</td>
+				<td>Last Modified</td>
+				<td></td>
+			</tr>
+		</thead>
+		<tbody></tbody>
+		<tfoot>
                         </div>
                     </td>
                 </tr>
