--- a/html/yourvideos.html
+++ b/html/yourvideos.html
@@ -134,8 +134,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="https://product.vyond.com/" onclick="amplitudeTrackCtaHelp('whats_new');" target="_blank">What’s New</a>
         </li>
     </ul>                                <li>
-                        <a class="hidden-sm hidden-md hidden-lg" href="https://josephcrosmanplays532.github.io/Vyond-Legacy-Remastered/videomaker.html">Make a Video</a>
-                        <span class="site-nav-btn hidden-xs"><a class="btn btn-orange" href="https://josephcrosmanplays532.github.io/Vyond-Legacy-Remastered/videomaker.html">Make a Video</a></span>
+                        <a class="hidden-sm hidden-md hidden-lg" href="/html/videomaker1.html">Make a Video</a>
+                        <span class="site-nav-btn hidden-xs"><a class="btn btn-orange" href="/html/videomaker1.html">Make a Video</a></span>
                     <li>
 
 <script>
