--- a/html/list.html
+++ b/html/list.html
@@ -188,7 +188,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- END OF HEADER -->
         <div class="free-trial-banner">
     <span class="glyph-pro glyph-warning-sign"></span>
-    Vyond Legacy Remastered version 1.2.2 is currently in public beta testing. please except some glitches in the videomaker, downtime, and software breaking bugs to occur.</div>
+    Good News! I Got The Videomaker on this site to work! bad news, the things i put in the oringl code crashed the code. so 2 html codes should do the job.</div>
 <script>
     (function(){
         // Log last upsell date.
